@@ -1,3 +1,7 @@
+Tue May 17 21:44:55 GMT 2011  Olly Betts <olly@survex.com>
+
+	* docs/scalability.html: Bring up-to-date.
+
 Wed May 11 01:34:34 GMT 2011  Olly Betts <olly@survex.com>
 
 	* AUTHORS: Add Scott Zhang for mingw fixes.
